--- a/rancher-config/docker-compose.yml
+++ b/rancher-config/docker-compose.yml
@@ -21,3 +21,4 @@ services:
         splunk-source: rancher-cleanup
         splunk-verify-connection: "false"
         tag: '{{.ImageName}} {{.Name}} {{.FullID}}'
+        splunk-format: json
